# proiect-map

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
.github/workflows/: docker-publish.yml
include/: ascii.hpp
src/: ascii.cpp  main.cpp
